--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "not op_mini all"
   ],
   "devDependencies": {
+    "cli-react": "^2.1.0",
     "node-sass-chokidar": "^1.3.4",
     "npm-run-all": "^4.1.3"
   }
