--- a/package.json
+++ b/package.json
@@ -31,6 +31,8 @@
   ],
   "devDependencies": {
     "cli-react": "^2.1.0",
+    "create-react-app": "^2.0.4",
+    "eslint": "^5.16.0",
     "node-sass-chokidar": "^1.3.4",
     "npm-run-all": "^4.1.3"
   }
