--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "react": "^16.5.2",
     "react-dom": "^16.5.2",
     "react-redux": "^5.0.7",
-    "react-scripts": "2.0.5",
+    "react-router-dom": "^5.0.0",
     "redux": "^4.0.1",
     "redux-react": "^2.0.0"
   },
@@ -32,8 +32,9 @@
   "devDependencies": {
     "cli-react": "^2.1.0",
     "create-react-app": "^2.0.4",
-    "eslint": "^5.16.0",
+    "eslint": "^5.12.0",
     "node-sass-chokidar": "^1.3.4",
-    "npm-run-all": "^4.1.3"
+    "npm-run-all": "^4.1.3",
+    "react-scripts": "^2.1.8"
   }
 }
